とりあえずカスタムタスクランナーで動いたが、ワーカー数の制限が上手くいかない

--- a/compose.yml
+++ b/compose.yml
@@ -109,6 +109,8 @@ services:
     depends_on:
       prefect-server:
         condition: service_healthy
+      prefect-init:
+        condition: service_completed_successfully
     deploy:
       replicas: 2
     restart: unless-stopped
@@ -126,7 +128,7 @@ services:
     command: >
       sh -c "
       echo 'Waiting for Prefect API...' &&
-      sleep 1 &&
+      sleep 5 &&
       echo 'Deleting old work pool if exists...' &&
       prefect work-pool delete default-agent-pool || true &&
       echo 'Creating new work pool...' &&
@@ -134,6 +136,8 @@ services:
       echo 'Deploying flows...' &&
       cd /opt/prefect/flows &&
       prefect deploy --all &&
+      echo 'Verifying deployment...' &&
+      prefect deployment inspect 'create_tiles/create-tiles-default' &&
       echo 'Initialization complete!'
       "
     restart: "no"
