環境変数の指定ミスってたので修正

--- a/compose.yml
+++ b/compose.yml
@@ -97,8 +97,8 @@ services:
       IMAGE_HEIGHT: ${IMAGE_HEIGHT}
       IMAGE_MARGIN_WIDTH: ${IMAGE_MARGIN_WIDTH}
       IMAGE_MARGIN_HEIGHT: ${IMAGE_MARGIN_HEIGHT}
-      ENABLE_WIDTH: ${ENABLE_WIDTH}
-      ENABLE_HEIGHT: ${ENABLE_HEIGHT}
+      IMAGE_EFFECTIVE_WIDTH: ${IMAGE_EFFECTIVE_WIDTH}
+      IMAGE_EFFECTIVE_HEIGHT: ${IMAGE_EFFECTIVE_HEIGHT}
       TILE_QUALITY_MAX_ZOOM: ${TILE_QUALITY_MAX_ZOOM}
       TILE_QUALITY_OTHER: ${TILE_QUALITY_OTHER}
       ZOOM_LEVEL: ${ZOOM_LEVEL}
