--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -68,6 +68,29 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
+        # パネル配信 (storageへプロキシ、404は普通に404を返す)
+        location ~ ^/panels/([^/]+)/(.*)$ {
+            set $save_data_name $1;
+            set $panel_path $2;
+            
+            # storageへプロキシ
+            proxy_pass http://storage_backend/images/panels/$save_data_name/$panel_path;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            
+            # タイムアウト設定
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+            
+            # キャッシュヘッダー
+            expires 1d;
+            add_header Cache-Control "public, immutable";
+        }
+
         # 空のタイルを返す（エラー時）
         location @empty_tile {
             internal;
