workerが無駄に立ってたので外した。どうせレプリカで調整するほうがよいので

--- a/service-create-panel/Dockerfile
+++ b/service-create-panel/Dockerfile
@@ -27,4 +27,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 EXPOSE 5005
 
 # Gunicornで実行
-CMD ["gunicorn", "--bind", "0.0.0.0:5005", "--workers", "2", "--threads", "4", "--timeout", "300", "app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5005", "--threads", "4", "--timeout", "300", "app:app"]
