--- a/service-tile-cut/Dockerfile
+++ b/service-tile-cut/Dockerfile
@@ -25,4 +25,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 EXPOSE 5002
 
 # Gunicornで実行
-CMD ["gunicorn", "--bind", "0.0.0.0:5002", "--workers", "2", "--threads", "4", "--timeout", "120", "app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5002", "--threads", "4", "--timeout", "120", "app:app"]
