とりあえずバックエンドのたたき台ができた

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -23,14 +23,21 @@ http {
     access_log /var/log/nginx/access.log combined if=$loggable;
     error_log /var/log/nginx/error.log warn;
 
-    upstream backend_app {
-        server 127.0.0.1:4567;
+    upstream backend_main {
+        server backend:4567;
+    }
+
+    upstream backend_admin {
+        server backend:4568;
     }
 
     upstream storage_backend {
-        server ${STORAGE_HOST}:80;
+        server storage:80;
     }
 
+    # ========================================
+    # メイン画面（ポート8000）
+    # ========================================
     server {
         listen 8000;
         server_name _;
@@ -43,11 +50,11 @@ http {
 
         # タイル配信（storageへプロキシ、404を透過的に処理）
         location ~ ^/tiles/([^/]+)/(.*)$ {
-            set $save_data_name $1;
+            set $map_id $1;
             set $tile_path $2;
             
             # storageへプロキシ
-            proxy_pass http://storage_backend/images/tiles/$save_data_name/$tile_path;
+            proxy_pass http://storage_backend/images/tiles/$map_id/$tile_path;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,11 +77,11 @@ http {
 
         # パネル配信 (storageへプロキシ、404は普通に404を返す)
         location ~ ^/panels/([^/]+)/(.*)$ {
-            set $save_data_name $1;
+            set $map_id $1;
             set $panel_path $2;
             
             # storageへプロキシ
-            proxy_pass http://storage_backend/images/panels/$save_data_name/$panel_path;
+            proxy_pass http://storage_backend/images/panels/$map_id/$panel_path;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -100,7 +107,7 @@ http {
 
         # APIエンドポイント
         location /api/ {
-            proxy_pass http://backend_app;
+            proxy_pass http://backend_main;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -108,7 +115,29 @@ http {
 
         # ヘルスチェック
         location /health {
-            proxy_pass http://backend_app;
+            proxy_pass http://backend_main;
+        }
+    }
+
+    # ========================================
+    # 管理画面（ポート8001）
+    # ========================================
+    server {
+        listen 8001;
+        server_name _;
+
+        # 静的ファイルの配信
+        location / {
+            root /app/admin;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # APIエンドポイント
+        location /api/ {
+            proxy_pass http://backend_admin;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
