--- a/compose.yml
+++ b/compose.yml
@@ -60,6 +60,8 @@ services:
       retries: 5
     volumes:
       - ./volume-bin:/app/bin
+      - ./backend/public:/app/public:ro
+      - ./backend/admin:/app/admin:ro
     restart: unless-stopped
 
   # --- Prefect Layer ---
@@ -93,8 +95,6 @@ services:
     build: ./prefect
     command: prefect worker start --pool default-agent-pool
     environment:
-      # PREFECT_LOGGING_LEVEL: "CRITICAL"
-      # PREFECT_LOGGING_TO_API_ENABLED: false
       PREFECT_API_URL: http://prefect-server:4200/api
       SERVICE_CAPTURE_URL: http://service-capture:5000
       SERVICE_ESTIMATE_URL: http://service-estimate:5001
@@ -111,10 +111,6 @@ services:
     depends_on:
       prefect-server:
         condition: service_healthy
-      prefect-init:
-        condition: service_completed_successfully
-    deploy:
-      replicas: 2
     restart: unless-stopped
 
   # 初期化専用コンテナ（1回だけ実行）
@@ -133,8 +129,12 @@ services:
       sleep 5 &&
       echo 'Deleting old work pool if exists...' &&
       prefect work-pool delete default-agent-pool || true &&
-      echo 'Creating new work pool...' &&
-      prefect work-pool create default-agent-pool --type process &&
+      echo 'Creating new work pool with concurrency limit...' &&
+      prefect work-pool create default-agent-pool --type process --set-as-default &&
+      echo 'Creating global concurrency limit...' &&
+      prefect concurrency-limit create create-tiles-lock 1 || true &&
+      echo 'Creating work queue for create-tiles...' &&
+      prefect work-queue create create-tiles-queue --pool default-agent-pool --limit 1 || true &&
       echo 'Deploying flows...' &&
       cd /opt/prefect/flows &&
       prefect deploy --all &&
