全体の並行数制御を追加して、CPU使用率が100%に張り付くのを回避

--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,7 @@ SERVICE_TILE_CUT_REPLICAS=6
 SERVICE_TILE_MERGE_REPLICAS=2
 SERVICE_TILE_COMPRESS_REPLICAS=2
 SERVICE_CREATE_PANEL_REPLICAS=2
+CONCURRENCY_ALL=12
 
 # Cloudflare Tunnelを使ってサイトを公開する場合は、この環境変数にトークンを設定してください
 CLOUDFLARE_TUNNEL_TOKEN=*****
