--- a/compose.yml
+++ b/compose.yml
@@ -71,13 +71,6 @@ services:
     environment:
       PREFECT_UI_API_URL: /api
       PREFECT_API_DATABASE_CONNECTION_URL: postgresql+asyncpg://postgres:postgres@db:5432/prefect
-      SERVICE_CAPTURE_REPLICAS: ${SERVICE_CAPTURE_REPLICAS}
-      SERVICE_CAPTURE_WORKERS_PER_REPLICA: ${SERVICE_CAPTURE_WORKERS_PER_REPLICA}
-      SERVICE_ESTIMATE_REPLICAS: ${SERVICE_ESTIMATE_REPLICAS}
-      SERVICE_TILE_CUT_REPLICAS: ${SERVICE_TILE_CUT_REPLICAS}
-      SERVICE_TILE_MERGE_REPLICAS: ${SERVICE_TILE_MERGE_REPLICAS}
-      SERVICE_TILE_COMPRESS_REPLICAS: ${SERVICE_TILE_COMPRESS_REPLICAS}
-      SERVICE_CREATE_PANEL_REPLICAS: ${SERVICE_CREATE_PANEL_REPLICAS}
     ports:
       - "4200:4200"
     depends_on:
@@ -106,6 +99,14 @@ services:
       STORAGE_URL: http://storage
       TZ: ${TZ:-Asia/Tokyo}
       TILE_SIZE: ${TILE_SIZE}
+      SERVICE_CAPTURE_REPLICAS: ${SERVICE_CAPTURE_REPLICAS}
+      SERVICE_CAPTURE_WORKERS_PER_REPLICA: ${SERVICE_CAPTURE_WORKERS_PER_REPLICA}
+      SERVICE_ESTIMATE_REPLICAS: ${SERVICE_ESTIMATE_REPLICAS}
+      SERVICE_TILE_CUT_REPLICAS: ${SERVICE_TILE_CUT_REPLICAS}
+      SERVICE_TILE_MERGE_REPLICAS: ${SERVICE_TILE_MERGE_REPLICAS}
+      SERVICE_TILE_COMPRESS_REPLICAS: ${SERVICE_TILE_COMPRESS_REPLICAS}
+      SERVICE_CREATE_PANEL_REPLICAS: ${SERVICE_CREATE_PANEL_REPLICAS}
+      CONCURRENCY_ALL: ${CONCURRENCY_ALL}
     volumes:
       - ./prefect:/opt/prefect/flows:ro
     depends_on:
