撮影が稀に失敗するのを修正した

--- a/compose.yml
+++ b/compose.yml
@@ -154,7 +154,7 @@ services:
       STORAGE_URL: http://storage
       CAPTURE_SCROT_SETTLE_SECONDS: 0.1 # scrotがフレームバッファを読み込むまでの待機時間
       CAPTURE_SCROT_TIMEOUT_SECONDS: 30
-      CAPTURE_CROP_TIMEOUT_SECONDS: 30
+      CAPTURE_CROP_TIMEOUT_SECONDS: 60 # なぜか30秒では足りなかったので、とりあえず60秒に増やす
       CAPTURE_UPLOAD_TIMEOUT_SECONDS: 30
       CAPTURE_WORKER_THREADS: ${SERVICE_CAPTURE_WORKERS_PER_REPLICA} # スクショ撮影・クリップ・アップロードを並列化するためのスレッド数
       CAPTURE_TTL_SECONDS: 300 # GAME_CAPTURE_TIMEOUT_SECONDSより長く設定すること
